--- a/style.css
+++ b/style.css
@@ -12,9 +12,20 @@ body {
 }
 
 article {
+  background-image: url(assets/top-image.png), url(assets/bottom-image.png),
+   linear-gradient(0deg, rgba(0,0,0, .1),rgba(0,0,0, .05) ,rgba(0,0,0, .1) );
+  background-repeat: no-repeat;
+  background-position: top, bottom;
+
+  
+ 
+
+  /* background-image: url(assets/bottom-image.png);
+  background-repeat: no-repeat;
+  background-position: bottom; */
   width: 210mm;
-  height: 297mm;
-  margin: 20px auto;
+  height: 100vh;
+  margin: 0px auto;
   position: relative;
 }
 
