--- a/style.css
+++ b/style.css
@@ -12,10 +12,13 @@ body {
 }
 
 article {
+  background-color: white;
   background-image: url(assets/top-image.png), url(assets/bottom-image.png),
-   linear-gradient(0deg, rgba(0,0,0, .1),rgba(0,0,0, .05) ,rgba(0,0,0, .1) );
+   linear-gradient(45deg, rgba(0,0,0, .2),rgba(178, 64, 121, .3) ,rgba(0,0,0, .2) );
   background-repeat: no-repeat;
   background-position: top, bottom;
+  border-block: 1mm solid rgb(40, 27, 27);
+ 
 
   
  
